--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <nav class="navigation container">
+        <header>
+            <h1>Fun with Triangle</h1>
+        </header>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="#">Is Triangle</a>
