--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <label class="input-label" for = "angle1">
         <p>angle1</p>
     </label>
-    <input class="input-text" type = "number" class = "angle-input">
+    <input id="input-text" type = "number" class = "angle-input">
     <label class="input-label" for = "angle2">
         <p>angle2</p>
     </label>
-    <input class="input-text" type = "number" class = "angle-input">
+    <input id="input-text" type = "number" class = "angle-input">
     <label class="input-label" for = "angle3">
         <p>angle3</p>
     </label>
-    <input class="input-text" type = "number" class = "angle-input">
+    <input id="input-text" type = "number" class = "angle-input">
     <br>
     <br>
     <button class="btn-check" id = "is-triangle-btn">Is Triangle?</button>
