--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -32,11 +32,11 @@
     <label class="input-label" for="a">
         <p>Enter value of a =</p>
     </label>
-    <input class="input-text" type="number" class="side-input">
+    <input id="input-text" type="number" class="side-input">
     <label class="input-label" for="b">
         <p>Enter value of b =</p>
     </label>
-    <input class="input-text" type="number" class="side-input">
+    <input id="input-text" type="number" class="side-input">
     <button class="btn-check" id="hypotenuse-btn">Calculate Hypotenuse</button>
     <br>
     <br>
